--- a/test/Gemfile
+++ b/test/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'octopress-include-tag', path: '../'
-gem 'octopress-ink'
+gem 'octopress'
+gem 'octopress-ink', path: '../../ink'
 gem 'pry-debugger'
 gem 'clash'
