--- a/test/Gemfile
+++ b/test/Gemfile
@@ -2,6 +2,6 @@ source 'https://rubygems.org'
 
 gem 'octopress-include-tag', path: '../'
 gem 'octopress'
-gem 'octopress-ink', path: '../../ink'
+gem 'octopress-ink'
 gem 'pry-debugger'
 gem 'clash'
